# MH-Tools

./: .gitattributes  .gitignore
cpp/Koaloader/KoalaBox/: build.ps1
cpp/Scripts/: Koaloader.ps1  SmokeAPI.ps1
cpp/Termjiten/src/include/: backend_jmdict.cpp  backend_kanjidic.cpp  backend_kanjidic.h  comparison.h  (+1 more)
cpp/jp-en-translation/: CMakeLists.txt  clang-format.ps1
cpp/jp-en-translation/src/: termjiten.cpp
cpp/jp-en-translation/src/include/: backend_jmdict.h  backend_jmnedict.cpp  backend_jmnedict.h  help.h  simple_ini_parser.h  utils.cpp  utils.h
cpp/rise-pak-patch/: .gitignore
go/: MHWArchiveManager.rc  build-syso.bat  build-syso.ps1  build.bat  build.ps1  go.mod  go.sum
go/cmd/cli/: cli.go
go/cmd/cli_only/: cli_only.go
go/cmd/gui/: gui.go
go/cmd/gui_only/: gui_only.go
go/cmd/main/: main.go  main_win32.go
go/cmd/quest_gmd_cli/: quest_gmd_cli.go
go/mhw-archive-manager/: build-syso.bat  build.bat  go.mod  go.sum
go/pkg/ansi/: output_windows.go
go/pkg/c/: reader.go  utf.go  writer.go
go/pkg/config/: config.go
go/pkg/core/: backend_cli.go  backend_gui.go  backend_gui_threads.go
go/pkg/fsprovider/: fsprovider.go
go/pkg/logger/: logger.go
go/pkg/manager/: backend_cli.go  backend_gui.go  index.go  install.go  launcher.go  profile.go
go/pkg/pak/: data.go  pak.go  table.go
go/pkg/sevenzip/: parser.go  parser_builtins.go  parser_functions.go  sevenzip.go
go/pkg/util/: cmd.go  quest_gmd.go
go/pkg/win32/: AllocConsole.go  AttachConsole.go  console.go
go/scripts/: MHW-BuildEffectRemovalMod.ps1  MHW-BuildEffectRemovalMod2.ps1
(+10 files in other folders)
